# jurassic-open-world

./: .pre-commit-config.yaml  README.md  pyproject.toml
configs/data/: coco.yaml
configs/model/: grounding_dino_tiny_idea.yaml
configs/training/: finetune_1x.yaml
scripts/: eval_coco.py  eval_fscd147.py  eval_lvis.py  eval_speed_mem.py  train.py
src/jurassic_open_world/data/: custom_transforms.py  datamodule.py  dataset.py  transforms.py
src/jurassic_open_world/data/dataset_plugins/: base.py  coco.py  od.py  vg.py
src/jurassic_open_world/inference/: postprocessor.py  predictor.py  visualization.py
src/jurassic_open_world/modeling/loss/: contrastive_denoiser.py  denoising_loss.py  detection_loss.py  matcher.py  set_loss.py
src/jurassic_open_world/modeling/model/: grounding_dino.py
src/jurassic_open_world/training/: training.py
src/jurassic_open_world/utils/: box.py  callbacks.py  config.py  image.py  misc.py  text.py  types.py
tests/test_modeling/test_loss/: original_impl.py  test_box_ops.py  test_loss.py  test_matcher.py
tests/test_modeling/test_model/: test_multi_scale_deformable_attention.py
tests/test_modeling/test_model/test_cross_scale_encoder/: test_cross_scale_encoder.py  test_cross_scale_encoder_layer.py  test_fusion_layer.py
tests/test_modeling/test_model/test_decoder/: original_impl.py  test_cross_modality_decoder.py  test_cross_modality_decoder_layer.py
tests/test_postprocessing/: original_impl.py  test_postprocessor_map.py  test_predictory.py
tests/utils/: configs.py  convert_huggingface.py  data_generation_utils.py
(+34 files in other folders)
